content/vault/v1.9.x/content/docs/upgrading/upgrade-to-1.6.0.mdx
---
layout: docs
page_title: Upgrading to Vault 1.6.0 - Guides
description: |-
  This page contains the list of deprecations and important or breaking changes
  for Vault 1.6.0. Please read it carefully.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T11:54:12-05:00
last_modified: 2025-07-25T10:39:53-07:00
# END AUTO GENERATED METADATA
---

# Overview

This page contains the list of deprecations and important or breaking changes
for Vault 1.6.0 compared to 1.5. Please read it carefully.

## Go Version

Vault 1.6.0 is built with Go 1.15. Please review the [Go Release
Notes](https://golang.org/doc/go1.15) for full details. A few items of
particular note:

- Go 1.15 has dropped support for 32-bit binaries on macOS, iOS, iPadOS,
  watchOS, and tvOS, and Vault is no longer issuing darwin_386 binaries
- Go 1.15 no longer treats the `CommonName` field on X.509 certificates as a
  host name. X.509 certificates should be validated and potentially regenerated
  before upgrading if they do not have Subject Alternative Names.

## Transform Secrets Engine Storage Upgrade

The Transform Secrets Engine (Enterprise only) will automatically upgrade the
storage of its configuration in order to accommodate the new transformation
type oriented configuration API. Secondaries will receive the
modifications via replication.

## Database Engine Interface Upgrade

The Database Engine has changed the underlying interface between Vault and each database
implementation. This change allows use of [password policies](/vault/docs/concepts/password-policies)
within the Database engine. The API for the Database Engine has not changed, only the underlying
interface between Vault and the database plugins. All built-in database plugins (as well as the
[Oracle](https://github.com/hashicorp/vault-plugin-database-oracle) plugin) have been upgraded to
the new interface so no user actions are needed. Vault will continue to recognize existing custom
database plugins but the old interface should be considered deprecated and may be removed in a
future release. See our [upgrade guide for custom databases](/vault/docs/secrets/databases/custom) for
more information on upgrading custom database plugins.

@include 'alpine-314.mdx'

## Known Issues

Due to the known issue, Transform Secrets Engine users are recommended to upgrade to version 1.6.4.
Due to the known issue, Lease Count Quota users with DR Secondaries are recommended to upgrade to version 1.6.6.

@include 'transform-upgrade.mdx'

@include 'lease-count-quota-upgrade.mdx'
